Z-Index Fixed

--- a/2QikTech.dev/css/_button.scss
+++ b/2QikTech.dev/css/_button.scss
@@ -24,8 +24,3 @@ button{
     line-height: 27px;
     // filter: drop-shadow(0px 0px 4px #00000040);
 }
-
-.text_container_list{
-
-}
-
