--- a/2QikTech.dev/css/_header.scss
+++ b/2QikTech.dev/css/_header.scss
@@ -14,6 +14,6 @@
 
     color: #000000;
     font-family: 'Sulphur Point', sans-serif;
-    z-index: 2;
+    z-index: 3;
 }
 
