--- a/2QikTech.dev/css/_responsive_header.scss
+++ b/2QikTech.dev/css/_responsive_header.scss
@@ -11,7 +11,9 @@
         top: 0%;
         margin: 0;
         left: 0;
-        background: linear-gradient(90deg, rgba(255, 241, 230, 0.6) 0%, rgba(255, 241, 230, 0.4) 100%);
+        // background: linear-gradient(90deg, rgba(255, 241, 230, 0.6) 0%, rgba(255, 241, 230, 0.4) 100%);
+        background-color: #BEE1E6;
+
         backdrop-filter: blur(100px);
         // background-color: #FFF1E6;
         // filter: drop-shadow(0px 4px 3px rgba(0, 0, 0, 0.2));
@@ -24,15 +26,18 @@
         .navigator{
             top: auto;
             width: 100%;
-            height: 7%;
+            height: 9%;
             margin: 0;
             position: absolute;
             flex-direction: row;
-            background-color: #fff;
             position: fixed;
             bottom: 0;
             justify-content: space-between;
             font-size: 18px;
+            border-radius: 20px 20px 0px 0px;
+
+            background: #BEE1E6;
+            // background: linear-gradient(90deg, #FFFFFF 0%, #FFF1E6 15.1%, #FAD2E1 64.06%, #BEE1E6 100%);
 
             .navigator_push{
                 display: flex;
@@ -40,30 +45,31 @@
                 align-items: center;
             // filter: drop-shadow(0px 4px 3px rgba(0, 0, 0, 0.2));
 
-
             }
             .navigator_1{
-                background-color: #FFF1E6;
-                background: linear-gradient(90deg, rgba(255, 241, 230, 0.6) 0%, rgba(255, 241, 230, 0.4) 100%);
-                backdrop-filter: blur(100px);
-                
+                // background-color: #fff;
+                font-weight: 600;
                 flex: 1;
                 height: 100%;
+                color: #2EC4B6;
+                // background-image: url("https://img.icons8.com/fluent-systems-filled/48/000000/home.png");
+                // background-repeat: no-repeat;
+
                 
             }
             .navigator_2{
-                background-color: #FAD2E1;
-                background: linear-gradient(80.7deg, rgba(250, 210, 225, 0.6) 3.48%, rgba(250, 210, 225, 0.3) 100%);
-                backdrop-filter: blur(100px);
+                // background-color: #FAD2E1;
+                // background-color: #fff;
+                font-weight: 600;
 
                 flex: 1;
                 height: 100%;
 
             }
             .navigator_3{
-                background-color: #BEE1E6;
-                background: linear-gradient(80.7deg, rgba(190, 225, 230, 0.6) 3.48%, rgba(190, 225, 230, 0.3) 100%);
-                backdrop-filter: blur(100px);
+                // background-color: #BEE1E6;
+                // background-color: #fff;
+                font-weight: 600;
 
                 flex: 1;
                 height: 100%;
