--- a/2QikTech.dev/css/_structure.scss
+++ b/2QikTech.dev/css/_structure.scss
@@ -1,13 +1,18 @@
-.content{   
+.content{
     position: absolute;
+    // position: relative;
     // background-color: blueviolet;
     width: 100%;
     height: 100%;
     scroll-snap-type: y mandatory;
     scroll-padding-top: 120px;
     overflow-y: scroll;
+    // background-color: #FAD2E1;
+    background: linear-gradient(90deg, #FFFFFF 0%, #FFF1E6 15.1%, #FAD2E1 64.06%, #BEE1E6 100%);
     // background: linear-gradient(90.98deg, #FFFFFF 0.48%, rgba(255, 241, 230, 0.3) 106.27%);
     // background-color: #fff;
+    // z-index: -1;
+
 
 
     .websites{
